--- a/pom.xml
+++ b/pom.xml
@@ -14,19 +14,27 @@
 	<packaging>war</packaging>
 	<name>creche</name>
 	<description>Demo project for Spring Boot</description>
-	<url/>
+	<!-- <url>https://example.com</url> -->
+	<!-- 
 	<licenses>
-		<license/>
+		<license>
+			<name>MIT License</name>
+			<url>https://opensource.org/licenses/MIT</url>
+		</license>
 	</licenses>
 	<developers>
-		<developer/>
+		<developer>
+			<name>Developer Name</name>
+			<email>dev@example.com</email>
+		</developer>
 	</developers>
 	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
+		<connection>scm:git:git://github.com/username/repository.git</connection>
+		<developerConnection>scm:git:ssh://github.com/username/repository.git</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/username/repository</url>
 	</scm>
+	-->
 	<properties>
 		<java.version>17</java.version>
 	</properties>
